fullcalendar.scss: added rules for better alignment of buttons and their icons, fixes #3631
Closes #3631

Merge request studip/studip!2624

--- a/resources/assets/stylesheets/fullcalendar.scss
+++ b/resources/assets/stylesheets/fullcalendar.scss
@@ -27,6 +27,16 @@ a.fc-event, td.fc-event {
 
             margin-top: 0;
             margin-bottom: 0;
+
+            &:last-of-type {
+                margin-right: 0;
+            }
+
+            .fc-icon {
+                /* Unset rules that are set in the fullcalendar default stylesheet: */
+                line-height: unset;
+                height: unset;
+            }
         }
     }
 }
